avoid magic to compute line

better jump a bit in the view on word wrap change instead of
having a hard crash

thanks for the very good reproduction steps inside the bug

BUG: 450817